[feat][Change To CQRS Pattern]
